--- a/app/classifica.html
+++ b/app/classifica.html
@@ -101,32 +101,56 @@
                                 </thead>
                                 <tbody>
                                     <tr class="premio">
-                                        <td>40</td>
-                                        <td>Matteo Pirazzoli</td>
+                                        <td>57</td>
+                                        <td>Patrick Bandini</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>57</td>
+                                        <td>Lorenzo Grottoli</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>52</td>
+                                        <td>Filippo Sampaoli</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>40</td>
-                                        <td>Filippo Sampaoli</td>
+                                        <td>Matteo Pirazzoli</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>40</td>
                                         <td>Filippo Rontini</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>37</td>
-                                        <td>Patrick Bandini</td>
+                                        <td>32</td>
+                                        <td>Riccardo Cardia</td>
                                     </tr>
-                                    <tr class="premio">
-                                        <td>37</td>
-                                        <td>Lorenzo Grottoli</td>
+                                    <tr>
+                                        <td>31</td>
+                                        <td>Massimo Piadelli</td>
                                     </tr>
-                                    <tr class="premio">
+                                    <tr>
+                                        <td>30</td>
+                                        <td>Matteo Bologna</td>
+                                    </tr>
+                                    <tr>
                                         <td>30</td>
                                         <td>Patrick Martini</td>
                                     </tr>
                                     <tr>
                                         <td>25</td>
                                         <td>Matteo Aldini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Lorenzo Anconelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Andrea Cerquetti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Stefano Rambelli</td>
                                     </tr>
                                     <tr>
                                         <td>25</td>
@@ -141,16 +165,28 @@
                                         <td>Mattia Gatta</td>
                                     </tr>
                                     <tr>
-                                        <td>25</td>
-                                        <td>Massimo Piadelli</td>
+                                        <td>24</td>
+                                        <td>Stefano Marchini</td>
                                     </tr>
                                     <tr>
                                         <td>20</td>
                                         <td>Federico Errani</td>
                                     </tr>
                                     <tr>
+                                        <td>19</td>
+                                        <td>Luca Poletti</td>
+                                    </tr>
+                                    <tr>
                                         <td>18</td>
-                                        <td>Matteo Bologna</td>
+                                        <td>Marco Sternini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Mattia Orioli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Matteo Accorsi</td>
                                     </tr>
                                     <tr>
                                         <td>15</td>
@@ -173,20 +209,28 @@
                                         <td>Samuel Frascio</td>
                                     </tr>
                                     <tr>
-                                        <td>12</td>
-                                        <td>Stefano Marchini</td>
-                                    </tr>
-                                    <tr>
-                                        <td>12</td>
-                                        <td>Riccardo Cardia</td>
-                                    </tr>
-                                    <tr>
                                         <td>10</td>
                                         <td>Alessio Saporetti</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
-                                        <td>Marco Sternini</td>
+                                        <td>Franco Pistocchi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Andrea Pistocchi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Alberto Moro</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Marco Moro</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Michele Malaguti</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
@@ -195,6 +239,18 @@
                                     <tr>
                                         <td>10</td>
                                         <td>Gianluca Garelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Lorenzo Tommasini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>Alessandro Mancini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>Matteo Camerani</td>
                                     </tr>
                                     <tr>
                                         <td>8</td>
@@ -210,15 +266,19 @@
                                     </tr>
                                     <tr>
                                         <td>8</td>
-                                        <td>Alessandro Mancini</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8</td>
-                                        <td>Matteo Camerani</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8</td>
                                         <td>Federico Rambaldi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Edoardo Larovere</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Gianluca Ghinassi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>Lorenzo Filippi</td>
                                     </tr>
                                     <tr>
                                         <td>6</td>
@@ -226,7 +286,11 @@
                                     </tr>
                                     <tr>
                                         <td>6</td>
-                                        <td>Lorenzo Filippi</td>
+                                        <td>Dario Bezzi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Michele Zoli</td>
                                     </tr>
                                     <tr>
                                         <td>6</td>
@@ -234,15 +298,15 @@
                                     </tr>
                                     <tr>
                                         <td>6</td>
-                                        <td>Lorenzo Tommasini</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6</td>
                                         <td>Nicola Morigi</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
-                                        <td>Luca Poletti</td>
+                                        <td>Giacomo Minniti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Michele Gardini</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
@@ -294,32 +358,48 @@
                                 </thead>
                                 <tbody>
                                     <tr class="premio">
-                                        <td>30</td>
+                                        <td>45</td>
                                         <td>Greta Galeati</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>25</td>
+                                        <td>45</td>
                                         <td>Michela Alfieri</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>25</td>
+                                        <td>37</td>
                                         <td>Sara Corradin</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>25</td>
+                                        <td>37</td>
                                         <td>Carlotta Bendandi</td>
                                     </tr>
                                     <tr class="premio">
+                                        <td>35</td>
+                                        <td>Alessia Carlini</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>30</td>
+                                        <td>Sonia Capriglia</td>
+                                    </tr>
+                                    <tr>
                                         <td>25</td>
                                         <td>Sofia Ceroni</td>
                                     </tr>
-                                    <tr class="premio">
+                                    <tr>
                                         <td>25</td>
                                         <td>Caterina Nanni</td>
                                     </tr>
                                     <tr>
-                                        <td>20</td>
-                                        <td>Alessia Carlini</td>
+                                        <td>25</td>
+                                        <td>Marica Bellettini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Susi Sbarzaglia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Michela Melandri</td>
                                     </tr>
                                     <tr>
                                         <td>20</td>
@@ -327,7 +407,11 @@
                                     </tr>
                                     <tr>
                                         <td>20</td>
-                                        <td>Sonia Capriglia</td>
+                                        <td>Federica Bandini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Vania Baravelli</td>
                                     </tr>
                                     <tr>
                                         <td>20</td>
@@ -347,11 +431,19 @@
                                     </tr>
                                     <tr>
                                         <td>15</td>
+                                        <td>Giulia Fabbri</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
                                         <td>Ilaria Giacometti</td>
                                     </tr>
                                     <tr>
                                         <td>15</td>
                                         <td>Jessica Joly</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Giorgia Sarasini</td>
                                     </tr>
                                     <tr>
                                         <td>12</td>
@@ -364,6 +456,30 @@
                                     <tr>
                                         <td>10</td>
                                         <td>Consuelo Raccagni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Nicole Ventisette</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Kathlen d'Emilio</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Anna Battistini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Lisa Raimondi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Lisa Raimondi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Eugenia Straforini</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
