--- a/app/iscrizioni.html
+++ b/app/iscrizioni.html
@@ -301,54 +301,78 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td>86</td>
-                                                        <td>Spritzzanti</td>
-                                                        <td>Patrick Bandini</td>
-                                                        <td>Lorenzo Grottoli</td>
-                                                        <td>Riccardo Cardia</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2</th>
-                                                        <td>25</td>
-                                                        <td></td>
-                                                        <td>Dario Bezzi</td>
-                                                        <td>Massimo Piadelli</td>
-                                                        <td>Michele Zoli</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3</th>
-                                                        <td>8</td>
-                                                        <td></td>
-                                                        <td>Lorenzo Monti</td>
-                                                        <td>Luca Poletti</td>
-                                                        <td>Mattia Orioli</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">4</th>
-                                                        <td>0</td>
-                                                        <td></td>
-                                                        <td>Stefano Rambelli</td>
-                                                        <td>Lorenzo Anconelli</td>
-                                                        <td>Andrea Cerquetti</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">5</th>
-                                                        <td>24</td>
-                                                        <td></td>
-                                                        <td>Alessandro Mancini</td>
-                                                        <td>Matteo Camerani</td>
-                                                        <td>Federico Rambaldi</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">6</th>
-                                                        <td>70</td>
-                                                        <td></td>
-                                                        <td>Matteo Bologna</td>
-                                                        <td>Filippo Sampaoli</td>
-                                                        <td>Stefano Marchini</td>
-                                                    </tr>
+                                                  <tr>
+                                                    <th scope="row">1</th>
+                                                    <td>86</td>
+                                                    <td>Spritzzanti</td>
+                                                    <td>Patrick Bandini</td>
+                                                    <td>Lorenzo Grottoli</td>
+                                                    <td>Riccardo Cardia</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">2</th>
+                                                    <td>25</td>
+                                                    <td>Orsetti sbronzi</td>
+                                                    <td>Dario Bezzi</td>
+                                                    <td>Massimo Piadelli</td>
+                                                    <td>Michele Zoli</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">3</th>
+                                                    <td>4</td>
+                                                    <td>Miii come sei pignolo</td>
+                                                    <td>Matteo Accorsi</td>
+                                                    <td>Luca Poletti</td>
+                                                    <td>Mattia Orioli</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">4</th>
+                                                    <td>0</td>
+                                                    <td>Academy</td>
+                                                    <td>Stefano Rambelli</td>
+                                                    <td>Lorenzo Anconelli</td>
+                                                    <td>Andrea Cerquetti</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">5</th>
+                                                    <td>22</td>
+                                                    <td>Squadra di Mancio</td>
+                                                    <td>Alessandro Mancini</td>
+                                                    <td>Matteo Camerani</td>
+                                                    <td>Lorenzo Filippi</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">6</th>
+                                                    <td>70</td>
+                                                    <td>ITloti</td>
+                                                    <td>Matteo Bologna</td>
+                                                    <td>Filippo Sampaoli</td>
+                                                    <td>Stefano Marchini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">7</th>
+                                                    <td>6</td>
+                                                    <td>Col sorriso</td>
+                                                    <td>Michele Gardini</td>
+                                                    <td>Giacomo Minniti</td>
+                                                    <td>Lorenzo Tommasini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">8</th>
+                                                    <td>10</td>
+                                                    <td>Se sei un uomo, tira forte!</td>
+                                                    <td>Marco Sternini</td>
+                                                    <td>Edoardo Larovere</td>
+                                                    <td>Gianluca Ghinassi</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">9</th>
+                                                    <td>0</td>
+                                                    <td>Maxicono</td>
+                                                    <td>Michele Malaguti</td>
+                                                    <td>Alberto/Marco Moro</td>
+                                                    <td>Franco/Andrea Pistocchi</td>
+                                                  </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -496,30 +520,54 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td>0</td>
-                                                        <td></td>
-                                                        <td>Nicole Ventisette</td>
-                                                        <td>Kathleen d'Emilio</td>
-                                                        <td>Anna Battistini</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2</th>
-                                                        <td>25</td>
-                                                        <td></td>
-                                                        <td>Michela Alfieri</td>
-                                                        <td>Silvia Battara</td>
-                                                        <td>Federica Bandini</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3</th>
-                                                        <td>20</td>
-                                                        <td></td>
-                                                        <td>Sonia Capriglia</td>
-                                                        <td>Lisa Raimondi</td>
-                                                        <td>Eugenia Straforini</td>
-                                                    </tr>
+                                                  <tr>
+                                                    <th scope="row">1</th>
+                                                    <td>0</td>
+                                                    <td>Do you ringo?</td>
+                                                    <td>Nicole Ventisette</td>
+                                                    <td>Kathleen d'Emilio</td>
+                                                    <td>Anna Battistini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">2</th>
+                                                    <td>25</td>
+                                                    <td></td>
+                                                    <td>Michela Alfieri</td>
+                                                    <td>Silvia Battara</td>
+                                                    <td>Federica Bandini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">3</th>
+                                                    <td>20</td>
+                                                    <td>Le antennine</td>
+                                                    <td>Sonia Capriglia</td>
+                                                    <td>Lisa Raimondi</td>
+                                                    <td>Eugenia Straforini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">4</th>
+                                                    <td>50</td>
+                                                    <td>Team spigoli</td>
+                                                    <td>Greta Galeati</td>
+                                                    <td>Alessia Carlini</td>
+                                                    <td>Giulia Fabbri</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">5</th>
+                                                    <td>0</td>
+                                                    <td>Avanti Marsch</td>
+                                                    <td>Marica Bellettini</td>
+                                                    <td>Susi Sbarzaglia</td>
+                                                    <td>Michela Melandri</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">6</th>
+                                                    <td>50</td>
+                                                    <td>Last Minute</td>
+                                                    <td>Sara Corradin</td>
+                                                    <td>Carlotta Bendandi</td>
+                                                    <td>Giorgia Sarasini</td>
+                                                  </tr>
                                                 </tbody>
                                             </table>
                                         </div>
